--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.9",
     "expo-constants": "~18.0.9",
+    "expo-document-picker": "~14.0.7",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.7",
     "expo-secure-store": "~15.0.7",
@@ -41,6 +43,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
